v1.6 Fix Daycare forms